workloads/defi-lending/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: defi-lending
  labels:
    goldilocks.fairwinds.com/enabled: "true"
    linkerd.io/inject: enabled
